--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Отправка отчета</title>
+    <meta charset="UTF-8">
+    <title>Определение местоположения</title>
 </head>
 <body>
-  <h1>Отчет о посещении сайта</h1>
-  <p>Данный отчет был отправлен автоматически при открытии страницы.</p>
-  <p>Время отправки: <span id="time"></span></p>
-  <script src="js.js"></script>
+    <h1>Определите свое местоположение</h1>
+    <p>Нажмите кнопку, чтобы получить ваше местоположение:</p>
+    <button id="get-location">Получить местоположение</button>
+    <div id="location-info"></div>
+    <script src="script.js"></script>
 </body>
 </html>
