--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Определение местоположения</title>
+    <title>Отправка почты</title>
 </head>
 <body>
-    <h1>Определите свое местоположение</h1>
-    <p>Нажмите кнопку, чтобы получить ваше местоположение:</p>
-    <button id="get-location">Получить местоположение</button>
-    <div id="location-info"></div>
+    <h1>Отправка почты</h1>
+    <p>Нажмите кнопку, чтобы отправить письмо:</p>
+    <button id="send-email">Отправить письмо</button>
+    <div id="email-info"></div>
     <script src="script.js"></script>
 </body>
 </html>
